src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Area_MTM__c</fullName>
        <label>Area MTM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area_MTM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Hour_lun_ven__c</fullName>
        <label>Business Hour (lun-ven)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Roma 8-22</fullName>
                </value>
                <value>
                    <fullName>New York 8.30-17.30</fullName>
                </value>
                <value>
                    <fullName>Shanghai 11-12:30; 13.30-20.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canale_di_Vendita__c</fullName>
        <label>Canale di Vendita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monobrand</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Associate__c</fullName>
        <label>Codice Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Boutique__c</fullName>
        <label>Codice Boutique</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyISOcode__c</fullName>
        <label>CurrencyISOcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>European_User__c</fullName>
        <formula>CASE( TEXT( Nation_Contact_Card__c ) ,                        
&quot;IT&quot;,1,
&quot;FR&quot;,1,
&quot;AT&quot;,1,
&quot;DE&quot;,1,
&quot;BE&quot;,1,
&quot;GR&quot;,1,
&quot;GB&quot;,1,
&quot;ES&quot;,1,
&quot;MC&quot;,1,
&quot;CH&quot;,1,
&quot;NL&quot;,1,
0)=1</formula>
        <label>European User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_Store_Manager__c</fullName>
        <label>Id Store Manager</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Contact_Card__c</fullName>
        <label>Language Contact Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Email__c</fullName>
        <label>Language_Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nation_Contact_Card__c</fullName>
        <label>Nation Contact Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Profilo__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Profilo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Manager__c</fullName>
        <formula>IF (Profile.Id  = $Setup.Profile__c.Id_Boutique__c,  true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>API_only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>API Only</value>
        </filters>
        <label>API only</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Utenti amministratore</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Associate</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>Codice_Associate__c</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CREATED_DATE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>associate</value>
        </filters>
        <label>Associate</label>
        <language>en_US</language>
        <sharedTo>
            <group>HQ_Admin</group>
            <role>Sede</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Associate_CA</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Codice_Associate__c</columns>
        <columns>Codice_Boutique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>associate</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>contains</operation>
            <value>CA</value>
        </filters>
        <label>Associate CA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Associate_DK</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BC - Associate</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BC - Boutique</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>DK</value>
        </filters>
        <label>Associate DK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Associate_GR</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BC - Associate</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>GR</value>
        </filters>
        <label>Associate GR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Associate_IT</fullName>
        <booleanFilter>2 AND 3 AND (1 OR 4)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CurrencyISOcode__c</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>Codice_Associate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>associate</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>cucinelli.it</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>boutique</value>
        </filters>
        <label>Associate IT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Associate_JP</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>associate</value>
        </filters>
        <label>Associate JP</label>
        <language>en_US</language>
        <sharedTo>
            <group>HQ_Admin</group>
            <group>Local_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Associate_NL</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>BC</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>NL</value>
        </filters>
        <filters>
            <field>Codice_Boutique__c</field>
            <operation>equals</operation>
            <value>911</value>
        </filters>
        <label>Associate NL</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Associate_RU</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LANGUAGE</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>Codice_Associate__c</columns>
        <columns>Nation_Contact_Card__c</columns>
        <columns>Language_Contact_Card__c</columns>
        <columns>Canale_di_Vendita__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Associate</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>cucinelli.ru</value>
        </filters>
        <label>Associate RU</label>
        <language>en_US</language>
        <sharedTo>
            <group>HQ_Admin</group>
            <group>Local_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boutique_RU</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>RU</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>boutique</value>
        </filters>
        <label>Boutique RU</label>
        <language>en_US</language>
        <sharedTo>
            <group>HQ_Admin</group>
            <group>Local_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boutiques_ALL</fullName>
        <columns>FULL_NAME</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CurrencyISOcode__c</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>boutique</value>
        </filters>
        <label>Boutiques ALL</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Boutiques_China</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>boutique</value>
        </filters>
        <filters>
            <field>Nation_Contact_Card__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <filters>
            <field>Nation_Contact_Card__c</field>
            <operation>equals</operation>
            <value>MO</value>
        </filters>
        <filters>
            <field>Nation_Contact_Card__c</field>
            <operation>equals</operation>
            <value>HK</value>
        </filters>
        <label>Boutiques China</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Boutiques_Japan</fullName>
        <columns>FULL_NAME</columns>
        <columns>Codice_Boutique__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>boutique</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>Boutiques Japan</label>
        <language>it</language>
        <sharedTo>
            <group>HQ_Admin</group>
            <group>Local_Admin</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>